--- a/from_css.css
+++ b/from_css.css
@@ -79,9 +79,22 @@ body
     height: 35vh;
     width: 23vw;
     left: 74vw;
-    top: -35vh;
+    top: -53vh;
     box-shadow: 2vh 2vw 35px 20px rgba(0, 0, 0, 0.457);
     transition: 1s;
+}
+#ab
+{
+    border-radius: 3rem;
+    position: relative;
+    background-color: white;
+    height: 16vh;
+    width: 37vw;
+    left: 34vw;
+    top: -9vh;
+    box-shadow: 2vh 2vw 35px 20px rgba(0, 0, 0, 0.457);
+    transition: 1s;
+    background-image: linear-gradient(45deg,lightgreen 20%, pink, lightblue, pink,transparent);
 }
 #input2
 {
@@ -238,6 +251,64 @@ label
     padding-right: 1vw;
     border: 0.1em solid violet;
 }
+#b1
+{
+    position: relative;
+    left: 11vw;
+    top: 5vh;
+    border-radius: 1em;
+    height: 4vh;
+    width: 4vw;
+    font-size: 1vw;
+    color: #ebebe5;
+    background-color: green;
+}
+#b2
+{
+    position: relative;
+    left: 18vw;
+    top: 5vh;
+    font-size: 1vw;
+    border-radius: 1em;
+    height: 4vh;
+    width: 4vw;
+    color: #ebebe5;
+    background-color: red;
+}
+#b3
+{
+    position: relative;
+    left: 8vw;
+    top: 5vh;
+    font-size: 1vw;
+    border-radius: 1em;
+    height: 4vh;
+    width: 4vw;
+    color: #ebebe5;
+    background-color: rgb(0, 64, 255);
+}
+#i1
+{
+    border: 0.1vw solid purple;
+    border-radius: 1em;
+    padding-left: 1vw;
+    font-size: 1.2vw;
+    position: relative;
+    top: -4.5vh;
+    width: 25vw;
+    left: 6.5vw;
+    height: 4vh;
+}
+#p1
+{
+    font-weight: bold;
+    font-size: 1.3vw;
+    position: relative;
+    left: 6vw;
+    top: 1vh;
+    color: #550291;
+    font-family: monospace;
+}
 #error_msg
 {
     position: relative;
@@ -273,7 +344,6 @@ label
     height: 4.5vh;
     animation:blink 1.2s infinite;
     border-right: 0.2rem solid;
-    font-size: 2em;
 }
 @keyframes blink
 {
@@ -371,12 +441,22 @@ label
     }
     #b
     {
-        top: -85vh;
-        width: 23vh;
+        top: -110vh;
+        width: 30vh;
+        /* height: 35vh; */
         box-shadow: none;
         z-index: 10;
         position: relative;
         left: 10vw;
+    }
+    #ab
+    {
+        top: 7vh;
+        width: 44vh;
+        box-shadow: none;
+        z-index: 10;
+        position: relative;
+        left: 11vw;
     }
     #check 
     {
@@ -421,7 +501,7 @@ label
         font-weight: bold;
         padding: 0.1em;
         font-size: 2vw;
-        top: 35vh;
+        top: 36vh;
         position: relative;
         left: 19vw;
         z-index: 50;
@@ -432,5 +512,40 @@ label
         animation: blink 1.2s infinite;
         border-right: 0.2rem solid;
         font-size: 1.2rem;
+    }
+    #b1
+    {
+        top: 8vh;
+        width: 9vw;
+        left: 16vw;
+        font-size: 1.5vh;
+    }
+    #b3
+    {
+        top: 8vh;
+        width: 10vw;
+        left: 30vw;
+        font-size: 1.5vh;
+    }
+    #b2
+    {
+        top: 8vh;
+        width: 10vw;
+        left: 23vw;
+        font-size: 1.5vh;
+    }
+    #i1
+    {
+        top: -1.5vh;
+        left: 17vw;
+        width: 42vw;     
+        font-size: 3.2vw;
+    }
+    #p1
+    {
+        font-size: 1.7vh;
+        position: relative;
+        left: 9vw;
+        top: 2.5vh;
     }
 }
